tests/golden/type_errors/adt_wrong_constructor_arity.cd
enum Result { Ok(number), Empty }
let result = Result.Ok();
