tests/golden/type_errors/adt_wrong_constructor_arity.err
Type error at 2:24: variant Result.Ok expects 1 arguments but got 0
  let result = Result.Ok();
                         ^
